--- a/bootstrap-exercice-one-million-lines-master/index.html
+++ b/bootstrap-exercice-one-million-lines-master/index.html
@@ -38,10 +38,16 @@
       <a class="navbar-brand" href="#">
         <img src="../bootstrap-exercice-one-million-lines-master/images/top-logo.png" alt="menu logo" width="auto" height="auto">
       </a>
+      
+      <!--menu d'autres ecrans-->
+      <div= class="text-right d-none d-sm-block" style="color:#b8b894;">
+        <a class="navbar-brand" href="#who">who we are</a>
+        <a class="navbar-brand" href="#get-involved">get involved</a>
+            </div=>
   
-  <!-- le button burger-->
-  <button class="navbar-toggler toggler-example d-sm-none" type="button" data-toggle="collapse" data-target="#navbarContent"
-  aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation"><i
+      <!--menu mobile-->
+            <!-- le button burger-->
+  <button class="navbar-toggler toggler-example d-sm-none" type="button" data-toggle="collapse" data-target="#navbarContent"><i
       class="fas fa-bars fa-1x"></i></button>
 
 <!-- le contenu-->
