--- a/bootstrap-exercice-one-million-lines-master/index.html
+++ b/bootstrap-exercice-one-million-lines-master/index.html
@@ -20,148 +20,152 @@
   <link href="css/custom.css" rel="stylesheet">
 </head>
 
+<!--le lien vers bootstrap JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
 <body>
-  <!--le lien vers bootstrap JS-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  
-  <!-- le menu-->
-  <nav class="navbar navbar-dark bg-dark">
-    <div class="container">
+  <!--le menu-->
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../bootstrap-exercice-one-million-lines-master/images/top-logo.png" alt="menu logo" width="auto" height="auto">
+        <img src="../bootstrap-exercice-one-million-lines-master/images/top-logo.png" alt="menu logo">
       </a>
-      
-      <!--menu d'autres ecrans-->
-      <div= class="text-right d-none d-sm-block" style="color:#b8b894;">
-        <a class="navbar-brand" href="#who">who we are</a>
-        <a class="navbar-brand" href="#get-involved">get involved</a>
-            </div=>
-  
-      <!--menu mobile-->
-            <!-- le button burger-->
-  <button class="navbar-toggler toggler-example d-sm-none" type="button" data-toggle="collapse" data-target="#navbarContent"><i
-      class="fas fa-bars fa-1x"></i></button>
+      <!--le logo de menu-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- le contenu-->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <!-- les liens -->
 
-<!-- le contenu-->
-<div class="collapse navbar-collapse" id="navbarContent">  
-
-  <!-- les liens -->
-     
-   <ul class="navbar-nav mr-auto">
-      <li class="nav-item">     
-        <a class="nav-link" href="#who">who we are</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#get-involved">get involved</a>
-      </li>
-  </div>
-  </nav>
-
-  <div id="home">
-    <div class="card bg-dark text-white">
-      <img class="card-img" src="../bootstrap-exercice-one-million-lines-master/images/hero-image.jpg" alt="Card image">
-      <div class="card-img-overlay">
-        <h2 class="card-title text-center">Our goal is to inspire
-          Tallahassee to write 1,000,000
-          lines of code_</h2>
-        <p class="card-text text-center"> All over the country people are taking the <span
-            style="font-weight: bold;">HOUR OF CODE</span> challenge issued by <span
-            style="font-weight: bold;">CODE.org</span>. Millions of lines of code
-          are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal
-          is to write
-          1,000,000 lines of code_</p>
-        <div class="text-center">
-          <button type="button" class="btn btn-danger">Learn more <i class="fas fa-chevron-right"></i></button>
-        </div>
-        <!--logo code-->
-        <div class="rounded float-center">
-          <img src="../bootstrap-exercice-one-million-lines-master/images/code.png" alt="Card logo">
-        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#who">who we are</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#get-involved">get involved</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+
+  <div id="home" class="p-4 text-center">
+    <div class="container-fluid">
+      <h2 class="text-white text-center fs-2">Our goal is to inspire
+        Tallahassee to write 1,000,000
+        lines of code_</h2>
+      <p class="text-white text-center fs-4"> All over the country people are taking the <span
+          style="font-weight: bold;">HOUR OF CODE</span> challenge issued by <span
+          style="font-weight: bold;">CODE.org</span>. Millions of lines of code
+        are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal
+        is to write
+        1,000,000 lines of code_</p>
+      <div class="text-center">
+        <button type="button" class="btn btn-danger btn-lg">Learn more <i class="fas fa-chevron-right"></i></button>
+        <!--logo code-->
+        <br>
+        <img src="images/code.png" alt="Code.org" class="mt-5">
+      </div>
+    </div>
+
+  </div>
+
+
   </div>
   <!-- /#who -->
-  <div id="who">
 
-    <div class="row">
 
-      <!-- LOGO Academy -->
-      <div class="col-xs-1">
-        <img class="academy" src="../bootstrap-exercice-one-million-lines-master/images/academy-brand-med.png"
-          alt="Academy logo">
-      </div>
+  <div id="who" class="p-4 text-center">
+    <!-- LOGO Academy -->
+    <div class="container-fluid">
 
-      <div class="col-xs-2">
-        <p class="text-center">We are <span style="color:red;">MASSIVE Academy</span>. We aim to improve education
-          through both method - effective project-based learning - and material
-          - by teaching skills that are applicable to improving your life today.</p>
-      </div>
+      <img src="images/academy-brand-med.png" alt="Academy Brand Med">
+      <h2 class="text-danger text-uppercase">who we are</h2>
+      <hr class="btn-outline-danger w-50 ms-auto me-auto">
 
-      <div class="col-xs-3">
-        <!-- /#get-involved -->
-        <div id="get-involved">
-          <!--LOGO STUDENTS-->
-          <i class="fas fa-user-alt"></i>
+      <p p class="text-center fs-4">We are <span style="color:red;">MASSIVE Academy</span>. We aim to improve education
+        through both method - effective project-based learning - and material
+        - by teaching skills that are applicable to improving your life today.</p>
+    </div>
+  </div>
+  <!--get involved section-->
+  <div id="get-involved" class="p-4 text-center bg-light bg-gradient">
+    <div class="container-fluid">
+      <h3 class="text-danger text-uppercase">get involved</h3>
+      <hr class="btn-outline-danger w-50 ms-auto me-auto">
+      <div class="row">
+        <div class="col-12 col-lg-4 p-4">
+          <!--fas STUDENTS-->
+
+          <i class="fas fa-user-alt fa-6x mb-4"></i>
+
           <!--text area-->
-          <h2>STUDENTS</h2>
-          <p class="text-center">Want to learn how to code? Want to
+          <p class="text-center fs-4 text-uppercase">students</p>
+          <p class="text-center fs-5">Want to learn how to code? Want to
             help us get to 1,000,000 lines? Click
             the button below and we'll let you know
             how to get involved.</p>
-
-          <button>Start Learning</button>
+          <button type="button" class="btn btn-outline-secondary text-danger bg-white m-5">Start Learning
+            &raquo;</button>
         </div>
-      </div>
 
-        <div class="col-xs-4">
-          <!--LOGO EDUCATORS-->
-          <i class="fas fa-pencil-alt"></i>
+
+
+        <div class="col-12 col-lg-4 p-4">
+          <!--fas EDUCATORS-->
+
+          <i class="fas fa-pencil-alt fa-6x mb-4"></i>
+
           <!--text area-->
-          <h2>EDUCATORS</h2>
-          <p>Want to bring this initiative to your
+          <p class="text-center fs-4 text-uppercase">educators</p>
+          <p class="text-center fs-5">Want to bring this initiative to your
             school or institution? Awesome! Click
             the button below and we'll make it
             happen.</p>
-          <button>Join The Initiative</button>
+
+          <button type="button" class="btn btn-outline-secondary text-danger m-5  bg-white">Join The
+            Initiative</button>
         </div>
 
-        <div class="col-xs-5">
-          <!--LOGO SPONSORS-->
-          <i class="far fa-money-bill-alt"></i>
+
+        <div class="col-12 col-lg-4 p-4">
+          <!--fas SPONSORS-->
+
+          <i class="far fa-money-bill-alt fa-6x md-4"></i>
+          <br> 
           <!--text area-->
-          <h2>SPONSORS</h2>
-          <p class="text-center">We love all the support we get to help
+          <p class="text-center fs-4 text-uppercase">sponsors</p>
+          <br>
+          <p class="text-center fs-5">We love all the support we get to help
             host more events, and empower more
             lives with the knowledge of coding.</p>
-          <button>Give Support</button>
+
+          <button type="button" class="btn btn-outline-secondary text-danger m-5  bg-white">Give Support</button>
         </div>
 
       </div>
     </div>
+  </div>
 
-    <footer>
-      <!-- img "logo bottom" avec le footer en rouge-->
-      <div class="container-fluid">
-        <div class="row bg-danger text-white">
-          <p class="align-text-bottom" style="margin-top:10%;margin-bottom:20%;">
-            <img src="../bootstrap-exercice-one-million-lines-master/images/one-million-bottom-brand.png" alt="footer logo" width="auto" height="auto">
-          </p>
-          <div class="text-right">
-            <!-- /#back-to-top -->
-            <a id="back-to-top" href="#" class="btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
-          </div>
-        </div>
 
-      </div>
-    </footer>
+
+
+  <footer class="bg-danger p-5">
+    <!-- img "logo bottom" avec le footer en rouge-->
+    <img src="images/one-million-bottom-brand.png" alt="ONEMILLIONLINES_" class="mt-5">
+  </footer>
+
+  <!-- /#back-to-top -->
+  <div id="back-to-top" class="position-fixed bottom-0 end-0 p-3">
+
+
+    <a href="#" class="btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+  </div>
+
+
 
 
 </body>
