menu logo FIXED

--- a/bootstrap-exercice-one-million-lines-master/index.html
+++ b/bootstrap-exercice-one-million-lines-master/index.html
@@ -29,7 +29,7 @@
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../bootstrap-exercice-one-million-lines-master/images/top-logo.png" alt="menu logo">
+        <img src="images/top-logo.png" alt="ONE MILLION LINES ">   
       </a>
       <!--le logo de menu-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
